# b3-market-data

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
api/: pyproject.toml
api/src/api/: caching.py  db.py  health.py  main.py  schemas.py
api/src/api/static/: index.html
api/tests/: test_caching.py  test_health.py  test_pending.py  test_summary.py
ingestion/: pyproject.toml
ingestion/src/ingestion/: logging_setup.py  poller.py  timezones.py  watchlist.py
ingestion/src/ingestion/corporate_actions/: api.py  storage.py  sync.py
ingestion/src/ingestion/trades/: events.py  files.py  models.py  publisher.py  watermarks.py
ingestion/tests/: test_corporate_actions.py  test_events.py  test_poller.py  test_trade_files.py  test_trades.py  test_watchlist.py  test_watermarks.py
risingwave/: schema.sql
