[project]
name = "api"
version = "0.1.0"
description = "Read-only HTTP API over the serving store"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "psycopg[binary,pool]>=3.2",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
