[project]
name = "ingestion"
version = "0.1.0"
description = "Captures B3 trade files and corporate actions"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.5",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    # IANA timezone database for ZoneInfo on systems without one (slim containers).
    "tzdata>=2025.1",
]

[project.scripts]
poller = "ingestion.poller:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
